--- a/src/components/Auth/Welcome.module.css
+++ b/src/components/Auth/Welcome.module.css
@@ -1,9 +1,13 @@
 h1 {
-    font-size: 2.5rem;
+    font-size: 3rem;
 }
 
 .lighter-text {
     color: gray;
+}
+
+.list {
+    list-style-type: none;
 }
 
 .content {
@@ -26,7 +30,7 @@ h1 {
     margin-top: 12px;
     width: 350px;
     background-color: white;
-    box-shadow: inset;
+    color: black;
     border-color: black;
 }
 
@@ -36,13 +40,6 @@ h1 {
     background-color: black;
     color: white;
     border-color: black;
-}
-
-.btn-rounded-light:hover,
-.btn-rounded-dark:hover {
-    background-color: lightgray;
-    outline-color: black;
-    color: black;
 }
 
 .btn-rounded-light:active,
