--- a/src/components/physiofile/PhysioFile.module.css
+++ b/src/components/physiofile/PhysioFile.module.css
@@ -1,8 +1,12 @@
 :root {
     --text-color: #045fbd;
     --text-font-size: 20px;
+    --text-font-weight: 500;
+    --text-line-height: 26px;
+    --title-font-weight: 700;
     --segment-left-margin: 20px;
     --segment-content-left-margin: calc(33px - var(--segment-left-margin));
+    --box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
 }
 
 .segments {
@@ -17,14 +21,35 @@
 
 .titles {
     color: var(--text-color);
-    font-weight: 700;
+    font-weight: var(--title-font-weight);
     font-size: var(--text-font-size);
-    line-height: 26px;
+    line-height: var(--text-line-height);
 }
 
 .texts {
     color: var(--text-color);
     font-size: var(--text-font-size);
-    font-weight: 500;
-    line-height: 26px;
+    font-weight: var(--text-font-weight);
+    line-height: var(--text-line-height);
+}
+
+.iconButtonsInText {
+    width: 16px;
+    height: 16px;
+    color: #0f86ff;
+}
+
+.textsAsLinks {
+    color: #0f86ff;
+    font-size: var(--text-font-size);
+    line-height: var(--text-line-height);
+}
+
+.textsAsLinks:hover {
+    cursor: pointer;
+    font-weight: var(--title-font-weight);
+}
+
+.boxShadow {
+    box-shadow: var(--box-shadow);
 }
