--- a/src/components/modals/ModalStyles.module.css
+++ b/src/components/modals/ModalStyles.module.css
@@ -17,11 +17,17 @@
     font-family: var(--font-family);
 }
 
-.rassModal {
-    min-width: 1000px;
+.modalsWidth {
+    min-width: 1300px;
 }
 
-.rassModalHeader {
+.modalsExitButton {
+    font-weight: var(--title-font-weight);
+    font-size: 26px;
+    line-height: 26px;
+}
+
+.modalsHeader {
     height: fit-content;
     width: 100%;
     background-color: var(--text-color);
@@ -31,6 +37,37 @@
     font-weight: var(--title-font-weight);
     font-size: var(--text-font-size);
     font-family: var(--font-family);
+}
+
+.modalsTable {
+    width: 450px;
+    max-height: 440px;
+    box-shadow: var(--box-shadow);
+    font-family: var(--font-family);
+}
+
+.modalsTextArea {
+    background-color: #d1f2ff;
+    color: var(--text-color);
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.notFilledHighlight {
+    border-color: red;
+}
+
+.infoIcon {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.infoIcon:hover {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    color: #3181d1;
 }
 
 .rassLinks {
@@ -53,12 +90,6 @@
     font-family: var(--font-family);
 }
 
-.rassTextArea {
-    background-color: #d1f2ff;
-    color: var(--text-color);
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-}
-
 .icon {
     width: 18px;
     height: 18px;
@@ -66,20 +97,14 @@
     color: #ffffff;
 }
 
-.rassTable {
-    width: 450px;
-    max-height: 440px;
-    box-shadow: var(--box-shadow);
-    font-family: var(--font-family);
-}
-
-.rassExitButton {
-    font-weight: var(--title-font-weight);
-    font-size: 26px;
-    line-height: 26px;
-}
-
 .tableSegment {
     display: flex;
     justify-content: center;
+}
+
+.vasTable {
+    width: 350px;
+    max-height: 440px;
+    box-shadow: var(--box-shadow);
+    font-family: var(--font-family);
 }
