--- a/src/components/LoadingSpinner.module.css
+++ b/src/components/LoadingSpinner.module.css
@@ -2,6 +2,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: inherit;
   font-family: "Nunito", sans-serif;
 }
