--- a/src/components/modals/ModalStyles.module.css
+++ b/src/components/modals/ModalStyles.module.css
@@ -129,3 +129,18 @@
     box-shadow: var(--box-shadow);
     font-family: var(--font-family);
 }
+
+.cpaxChartContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 300px; 
+    box-shadow: var(--box-shadow);
+    font-family: var(--font-family);
+    border-radius: 8px;
+    margin-right: 40px;
+    margin-top: 20px;
+    padding: 10px;
+    justify-content: center;
+    background-color: #80c1e4;
+}
