--- a/src/components/modals/ModalStyles.module.css
+++ b/src/components/modals/ModalStyles.module.css
@@ -142,5 +142,6 @@
     margin-top: 20px;
     padding: 10px;
     justify-content: center;
-    background-color: #80c1e4;
+    /* background-color: #80c1e4; */
+    background-color: whitesmoke;
 }
