--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,62 @@
 	padding: 0;
 	margin: 0;
 }
+
+@media print {
+
+	/* Hide everything */
+	body * {
+		visibility: hidden;
+	}
+
+	/* Show the Printing component */
+	body .printing-component * {
+		visibility: visible;
+	}
+
+	/* Position the Printing component on top */
+	body .printing-component {
+		position: absolute;
+		top: 0;
+	}
+
+	body .print-hospital-info {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		margin: 0px;
+		padding: 0px;
+		font-size: 16px !important;
+		line-height: 16px !important;
+	}
+
+	body .print-title {
+		font-size: 16px !important;
+	}
+
+	body .print-patient-details {
+		font-size: 16px !important;
+	}
+
+	body .print-physio-file-data {
+		font-size: 16px !important;
+	}
+
+	body .print-therapeut {
+		font-size: 16px !important;
+	}
+
+	body .print-date-of-print {
+		font-size: 16px !important;
+	}
+
+	body .print-gcs {
+		font-size: 16px !important;
+	}
+
+	body .print-mmt {
+		font-size: 16px !important;
+	}
+
+}
