--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 :root {
 	--text-color: #045fbd;
-	--background-color: #a6d6f0;
+	--background-color: #c7e3f1;
 	--box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
 }
 
@@ -9,6 +9,7 @@
 	background-color: var(--background-color);
 	color: var(--text-color);
 	box-shadow: var(--box-shadow);
+	border-radius: 8px;
 }
 
 .content_padding {
