--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,16 @@
 	margin: 0;
 }
 
+.fade-enter {
+	opacity: 0;
+	z-index: 1;
+}
+
+.fade-enter.fade-enter-active {
+	opacity: 1;
+	transition: opacity 300ms ease-in;
+}
+
 @media print {
 
 	/* Hide everything */
