--- a/src/components/modals/ModalStyles.module.css
+++ b/src/components/modals/ModalStyles.module.css
@@ -23,8 +23,8 @@
 
 .modalsExitButton {
     font-weight: var(--title-font-weight);
-    font-size: 26px;
-    line-height: 26px;
+    font-size: 20px;
+    line-height: 20px;
 }
 
 .modalsHeader {
@@ -155,7 +155,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 300px; 
+    min-height: 300px;
     max-width: 930px;
     box-shadow: var(--box-shadow);
     font-family: var(--font-family);
@@ -165,4 +165,8 @@
     padding: 10px;
     justify-content: center;
     background-color: whitesmoke;
+}
+
+.choosePhysioFileModalTable {
+    margin-right: 30px;
 }
